# quorum

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analyst-skills/: DISCLAIMER.md  README.md
analyst-skills/.claude-plugin/: plugin.json
analyst-skills/ansoff-analyst/: SKILL.md
analyst-skills/ansoff-analyst/reference/: ansoff.md
analyst-skills/blue-ocean-analyst/: SKILL.md
analyst-skills/blue-ocean-analyst/reference/: blue-ocean.md
analyst-skills/crossing-the-chasm-analyst/: SKILL.md
analyst-skills/crossing-the-chasm-analyst/reference/: crossing-the-chasm.md
analyst-skills/five-forces-analyst/: SKILL.md
analyst-skills/five-forces-analyst/reference/: five-forces.md
analyst-skills/good-strategy-critic/: SKILL.md
analyst-skills/jtbd-disruption-analyst/: SKILL.md
analyst-skills/mece-engagement-manager/: SKILL.md
analyst-skills/mece-engagement-manager/reference/: mece.md
analyst-skills/pestel-analyst/: SKILL.md
analyst-skills/playing-to-win-analyst/: SKILL.md
analyst-skills/pyramid-editor/: SKILL.md
analyst-skills/seven-powers-analyst/: SKILL.md
analyst-skills/tam-sam-som-analyst/: SKILL.md
analyst-skills/three-horizons-analyst/: SKILL.md
analyst-skills/valuation-analyst/: SKILL.md
analyst-skills/value-chain-analyst/: SKILL.md
docs/: architecture.md  roadmap.md
evals/: __init__.py  scorecard.py  skillopt.py
examples/: README.md  cn-electric-vehicles.md  us-cybersecurity.md
protocols/: README.md  mcp_server.py
src/quorum/: __init__.py  analyst.py  cli.py  crews.yaml  llm.py  memory.py  orchestrator.py  skills_loader.py
tests/: __init__.py  conftest.py  test_amendment.py  test_arithmetic.py  test_briefs.py  test_contracts.py  test_crews_consistency.py  test_phases.py  test_report_layout.py  test_revision_orders.py  test_skills.py  test_source_packs.py  test_stale_figures.py
(+37 files in other folders)
