[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quorum-firm"
version = "0.1.0"
description = "Open-source AI consulting firm: methodology analyst skills plus a multi-agent engagement engine producing sourced, fact-checked market reports."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "The Quorum Authors" }]
requires-python = ">=3.11"
keywords = ["agents", "consulting", "market-research", "strategy", "skills", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "requests>=2.32",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
quorum = "quorum.cli:main"

[project.urls]
Homepage = "https://github.com/EvanSnowdon/quorum"
Documentation = "https://github.com/EvanSnowdon/quorum/tree/main/docs"
Issues = "https://github.com/EvanSnowdon/quorum/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quorum = ["crews.yaml", "source_packs/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Start from the ruff defaults; widen to I/UP/B/SIM incrementally as the
# codebase is brought on-style.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
